# docs/api/openAPI.yaml
@@ -731,6 +731,85 @@ components:
         partnerSuppliesMaterial:
           type: boolean
       type: object
+    MaterialRelationDto:
+      additionalProperties: false
+      properties:
+        childMaterialNumber:
+          maxItems: 50
+          pattern: ^[^\n\x0B\f\r\x85\u2028\u2029]+$
+          type: string
+        createdOn:
+          format: date-time
+          maxItems: 50
+          type: string
+        lastModifiedOn:
+          format: date-time
+          maxItems: 50
+          type: string
+        measurementUnit:
+          enum:
+          - unit:piece
+          - unit:set
+          - unit:pair
+          - unit:page
+          - unit:cycle
+          - unit:kilowattHour
+          - unit:gram
+          - unit:kilogram
+          - unit:tonneMetricTon
+          - unit:tonUsOrShortTonUkorus
+          - unit:ounceAvoirdupois
+          - unit:pound
+          - unit:metre
+          - unit:centimetre
+          - unit:kilometre
+          - unit:inch
+          - unit:foot
+          - unit:yard
+          - unit:squareCentimetre
+          - unit:squareMetre
+          - unit:squareInch
+          - unit:squareFoot
+          - unit:squareYard
+          - unit:cubicCentimetre
+          - unit:cubicMetre
+          - unit:cubicInch
+          - unit:cubicFoot
+          - unit:cubicYard
+          - unit:litre
+          - unit:millilitre
+          - unit:hectolitre
+          - unit:secondUnitOfTime
+          - unit:minuteUnitOfTime
+          - unit:hourUnitOfTime
+          - unit:day
+          maxItems: 50
+          type: string
+        parentMaterialNumber:
+          maxItems: 50
+          pattern: ^[^\n\x0B\f\r\x85\u2028\u2029]+$
+          type: string
+        quantity:
+          format: double
+          type: number
+        uuid:
+          format: uuid
+          maxItems: 50
+          type: string
+        validFrom:
+          format: date-time
+          maxItems: 50
+          type: string
+        validTo:
+          format: date-time
+          maxItems: 50
+          type: string
+      required:
+      - childMaterialNumber
+      - measurementUnit
+      - parentMaterialNumber
+      - quantity
+      type: object
     MaterialStockDto:
       additionalProperties: false
       properties:
@@ -1404,7 +1483,7 @@ components:
       type: apiKey
 info:
   title: PURIS FOSS Open API
-  version: 5.0.0
+  version: 5.0.1
 openapi: 3.1.0
 paths:
   /days-of-supply/customer:
@@ -2728,6 +2807,60 @@ paths:
         requests. This endpoint is meant to be accessed by partners via EDC only. '
       tags:
       - demand-request-api-controller
+  /material-relations:
+    get:
+      description: Returns a list of all MaterialRelation entities.
+      operationId: getAllMaterialRelations
+      responses:
+        '200':
+          content:
+            '*/*':
+              schema:
+                additionalProperties: false
+                items:
+                  $ref: '#/components/schemas/MaterialRelationDto'
+                maxItems: 50
+                type: array
+          description: Successfully retrieved all MaterialRelation entities.
+      summary: Gets all material relations
+      tags:
+      - material-relation-controller
+    post:
+      description: Creates a new MaterialRelation entity with the data given in the
+        request body.
+      operationId: createMaterialRelation
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/MaterialRelationDto'
+              additionalProperties: false
+        required: true
+      responses:
+        '200':
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/MaterialRelationDto'
+                additionalProperties: false
+          description: Successfully created a new MaterialRelation entity.
+        '400':
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/MaterialRelationDto'
+                additionalProperties: false
+          description: Malformed request body.
+        '500':
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/MaterialRelationDto'
+                additionalProperties: false
+          description: Internal Server error.
+      summary: Creates a Material Relation -- ADMIN ONLY
+      tags:
+      - material-relation-controller
   /materialpartnerrelations:
     get:
       description: Returns a list of all MaterialPartnerRelations as DTOs.
